Fixed margin that caused a horizontal scrollbar to appear.

--- a/styles/default.css
+++ b/styles/default.css
@@ -153,7 +153,7 @@ a.logo { margin-left: 10px; float: left;}
 span.copyright { font-size: 8pt; color: #888}
 
 div.page_resource_info {
-  width: 100%; float: left; clear: left;
+  float: left; clear: left;
   text-align: left;
   margin: 15px; 
 }
